test/ddc-spec/error/01-ErrorExp/28-PrivateWitnessOther/Main.ds

module Main where

foo {@r1: Region} ()
 = private r2 with {Write r1} in ()

